# sepl

./: Cargo.toml  README.md  README_PL.md  TODO.md
res/: ascii_logo.txt
sepl_bin/: Cargo.toml
sepl_bin/src/: cli.rs  main.rs  repl.rs
sepl_lib/: Cargo.toml
sepl_lib/src/: lex.rs  lib.rs  parse.rs  stringify.rs
sepl_lib/src/eval/: builtin.rs  env.rs  error.rs  expr.rs  lit.rs  mod.rs  proc.rs  symbol.rs
src/: lex.rs  lib.rs  main.rs  parse.rs  stringify.rs
src/eval/: builtin.rs  env.rs  error.rs  expr.rs  lit.rs  mod.rs  proc.rs  symbol.rs  tests.rs
src/expr/: env.rs  error.rs  expr.rs  lit.rs  mod.rs  proc.rs  symbol.rs
src/parse/: error.rs  mod.rs  parser.rs
